--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "usecontext-practice",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jsohndata.github.io/practice-react-usecontext",
   "dependencies": {
     "@picocss/pico": "^1.5.10",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
